[package]
description = "A Nushell plugin to export data to xlsx files"
edition = "2021"
name = "nu_plugin_to_xlsx"
version = "0.4.0"

authors = ["eggcaker <eggcaker@gmail.com>"]
categories = ["command-line-utilities"]
keywords = ["nushell", "plugin", "nu", "xlsx", "excel"]
license = "MIT"
repository = "https://github.com/eggcaker/nu_plugin_to_xlsx"

[dependencies]
chrono = "0.4"
nu-engine = "0.110.0"
nu-plugin = "0.110.0"
nu-protocol = "0.110.0"
rust_xlsxwriter = "0.52.0"
